Check barcode support.

--- a/src/index.html
+++ b/src/index.html
@@ -14,4 +14,26 @@
   </main>
 </body>
 
+<script>
+  // check compatibility
+  if (!('BarcodeDetector' in window)) {
+    console.log('Barcode Detector is not supported by this browser.');
+  } else {
+    console.log('Barcode Detector supported!');
+
+    // create new detector
+    var barcodeDetector = new BarcodeDetector({ formats: ['code_39', 'codabar', 'ean_13'] });
+
+    // check supported types
+    BarcodeDetector.getSupportedFormats()
+      .then(supportedFormats => {
+        supportedFormats.forEach(format => console.log(format));
+      });
+
+  }
+
+
+
+</script>
+
 </html>
